Class name overlap in CSS fixed for settings

--- a/src/people/PersonTypeTile/PersonTypeTile.css
+++ b/src/people/PersonTypeTile/PersonTypeTile.css
@@ -5,7 +5,7 @@
     justify-content: center;
   }
   
-  .label {
+  .person-type-label {
     font-size: 14px;
     margin: 0px;
     padding: 5px;
